--- a/.github/workflows/test-pdf-pack.yml
+++ b/.github/workflows/test-pdf-pack.yml
@@ -4,70 +4,46 @@ on:
   push:
     branches: main
   pull_request:
+    branches: main
   workflow_dispatch:
 
 jobs:
-  test-conda:
-    name: conda-${{ matrix.python-version }}-${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.13] # requires manual update
+  test-scripts:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up conda
+      - name: Check out the repository
+        uses: actions/checkout@v4
+
+      - name: Initialize Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          activate-environment: test
           channels: conda-forge
-      - name: Install diffpy.cmi and dependencies
+          python-version: 3.13
+          auto-activate-base: false
+
+      - name: Configure Conda
         run: |
-          conda install -y -c conda-forge matplotlib diffpy.cmi
+          conda config --set always_yes yes --set changeps1 no
+
+      - name: Install dependencies
+        run: |
+          conda install -y matplotlib diffpy.cmi
           conda install --file requirements/packs/core.txt -y
           conda install --file requirements/packs/docs.txt -y
           conda install --file requirements/packs/pdf.txt -y
           conda install --file requirements/packs/plotting.txt -y
           conda install --file requirements/packs/tests.txt -y
-      - name: List Conda Installed Packages
-        run: conda list
-      - name: Run diffpy.cmi scripts from docs/examples
-        shell: bash
-        run: |
-          set -e
-          export MPLBACKEND=Agg
-          for script in docs/examples/ch*/solutions/diffpy-cmi/*.py; do
-            python "$script"
-          done
 
-  test-pip:
-    name: pip-${{ matrix.python-version }}-${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.13] # requires manual update
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Upgrade pip and Install diffpy.cmi and other dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install diffpy.cmi
-          pip install -r requirements/packs/core.txt
-          pip install -r requirements/packs/docs.txt
-          pip install -r requirements/packs/pdf.txt
-          pip install -r requirements/packs/plotting.txt
-          pip install -r requirements/packs/tests.txt
-      - name: Run diffpy.cmi scripts from docs/examples
-        shell: bash
+      - name: List Installed Packages
+        run: conda list
+
+      - name: Run diffpy.cmi scripts
+        shell: bash -l {0}
         run: |
           set -e
           export MPLBACKEND=Agg
           for script in docs/examples/ch*/solutions/diffpy-cmi/*.py; do
+            echo "Running $script..."
             python "$script"
           done
