set workflow to 3.13

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -11,6 +11,7 @@ jobs:
       project: diffpy.cmi
       c_extension: false
       headless: false
+      python_version: 3.13
       run: |
         set -Eeuo pipefail
         echo "Test cmds"
